# c-render

./: .gitignore  CMakeLists.txt
src/: app.c  main.c
src/c-render/: MVP.h  model.c  model.h  pixels.c  pixels.h
